Implement account routes and update api client schemas
